# amazon-utac

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
data/: boulton2022_resilience.yaml  lovejoy2019_targets.yaml  prodes_annual_summary.yaml
src/amazon_utac/: __init__.py  benchmark.py  constants.py  crep_amazon.py  deforestation.py  ethics_gate.py  forest_cover.py  rainfall.py  resilience.py  savanna_attractor.py  system.py
src/diamond_setup/templates/: __init__.py  amazon_utac.py
tests/amazon_utac/: test_benchmark.py  test_diamond_interface.py  test_dual_attractor.py  test_forest_cover.py
